--- a/client/index.html
+++ b/client/index.html
@@ -18,10 +18,9 @@
       <link rel="apple-touch-icon" href="/apple-touch-icon.png">
       
       <!-- Primary Meta Tags -->
-      <title>SUBLIME - SchoolERP</title>
-      <meta name="title" content="SUBLIME - School Management System">
-      <meta name="description" content="Comprehensive school management system for academic institutions. Manage students, teachers, grades, exams, and academic records efficiently with our modern web-based platform.">
-      <meta name="keywords" content="school management system, student portal, academic management, grade management, exam management, teacher portal, education software, school administration">
+      <title>BondiHub</title>
+      <meta name="title" content="BondiHub">
+     
       <meta name="author" content="QUANTUMLOGIX SYSTEMS">
       <meta name="robots" content="index, follow">
       <meta name="language" content="English">
